libs/extractor/tests/snapshots/all_tests__vanilla_extract_style_composition_empty.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"empty-comp.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nexport const empty = style([])\nexport const withEmpty = style([{}])\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "export const empty = \"\";\nexport const withEmpty = \"\";\n",
}
